YDM-34 // code improvements, toPersisted in recommendation configuration in memory repo, controller response, integration tests, factory for recommended movies along with unit tests, used reflection in setting ID