@@ -4,6 +4,7 @@ import lombok.Builder;
 import pl.szczesniak.dominik.whattowatch.recommendations.domain.model.MovieGenre;
 import pl.szczesniak.dominik.whattowatch.users.domain.model.UserId;
 
+import java.util.Collections;
 import java.util.Set;
 
 import static java.util.Optional.ofNullable;
@@ -14,7 +15,7 @@ public class CreateRecommendationConfigurationSample {
 	@Builder
 	private static CreateRecommendationConfiguration build(final Set<MovieGenre> genreNames, final UserId userId) {
 		return new CreateRecommendationConfiguration(
-				ofNullable(genreNames).orElse(Set.of()),
+				ofNullable(genreNames).orElse(Collections.emptySet()),
 				ofNullable(userId).orElse(createAnyUserId())
 		);
 	}
